--- a/O'Reilly_Chapter_3_Classification.ipynb
+++ b/O'Reilly_Chapter_3_Classification.ipynb
@@ -4,7 +4,9 @@
   "metadata": {
     "colab": {
       "name": "O'Reilly Chapter 3 - Classification",
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNDtEcLoq34nKGD3Z3Q0KhE",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -12,6 +14,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Feffote/Hands-On_ML/blob/master/O'Reilly_Chapter_3_Classification.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
